2009-06-22  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Mention imminent demise of certain procs.

	* libpq.c (lob_lo_get_connection):
	Add "will be removed" notice to docstring.
	(pg_get_client_data, pg_set_client_data): Likewise.

2009-06-21  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Minimize "make -C doc/" work in default case.

	* Makefile.am (schemefrags, schemestems): New vars.
	(dotdocfiles): Delete postgres-resdisp.doc, postgres-types.doc,
	postgres-col-defs.doc, postgres-resx.doc, postgres-qcons.doc,
	postgres-gxrepl.doc, postgres-table.doc, postgres-meta.doc.
	(BUILT_SOURCES): Delete $(dotdocfiles).
	(dist_d_DATA): Use $(schemestems).
	(BUILT_SOURCES) [MAINTAINER_MODE]: Append $(dotdocfiles).

2009-06-21  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[config] Use CPPFLAGS, LDFLAGS directly.

	* Makefile.am (AM_CPPFLAGS): Delete var.
	(postgres_la_LDFLAGS): Remove $(LDFLAGS), $(PQ_LDFLAGS).
	(snarfcppopts): Remove $(AM_CPPFLAGS); add $(DEFAULT_INCLUDES).

2009-06-21  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[C int] Update #include:d files.

	* libpq.c: #include "config.h" instead of <config.h>;
	#include <stdlib.h>.

2009-06-20  Thien-Thi Nguyen  <ttn@gnuvola.org>

	New (database postgres) proc: pg-server-version

	* libpq.c (pg_server_version): New GH_DEFPROC.

2009-06-20  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Revert: Support "E-prefixing" for `pgtable-manager' SQL quoting.

	That is the wrong approach.

	* postgres-table.scm: From module (database postgres),
	no longer select `pg-result-status'.
	(pgtable-manager): Use `sql-quote' directly.

2009-06-20  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[qcons] Do single-quote escaping via doubling, per SQL standard.

	* postgres-qcons.scm (sql-quote): Escape single-quote
	by doubling, instead of inserting a backslash prior to, it.

2009-06-20  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[t-mgr int] For column values, allow keywords to stand for themselves.

	* postgres-table.scm (pgtable-manager ->db-insert-string):